gitops/keycloak/admin-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-admin-redirect
  namespace: keycloak
spec:
  redirectRegex:
    regex: "^.*/keycloak.*"
    replacement: "/auth/admin/master/console/"
    permanent: false
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin-redirect
  namespace: keycloak
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: keycloak-keycloak-admin-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /keycloak
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
